[package]
name = "oled-display"
version = "0.1.0"
authors = ["Marvin Ouma <pancakesdeath@protonmail.com>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.5.2", features = ["rt", "stm32f103" ] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.8", features = ["device"] }
panic-semihosting = "0.5.2"
ssd1306 = "0.3.1"
embedded-graphics = "0.6.2"
